# grpc-aws-sdk-cpp

./: CloudFormationTemplate.yaml  CloudFormationTemplateParameters.json  Dockerfile  README.md
src/: CMakeLists.txt  FindGRPC.cmake  kvClient.cpp  kvServer.cpp
src/protos/: kv.proto
src/scripts/: cpld.sh
src/service/: SettingsClient.cpp  SettingsClient.h  SettingsImpl.cpp  SettingsImpl.h
